--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
      <h1>Meu primeiro site</h1>
 	 <p>Esta é minha primeira experiencia com HTML</p>
 	<img src="https://i.redd.it/9zgiwdt3va671.jpg" width="200rem">
+	<img src="img/dania img.webp" width="200rem">
 <body>
 
 <html>
