Revisão no código

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 	 <p>Esta é minha primeira experiencia com HTML</p>
 	<img src="https://i.redd.it/9zgiwdt3va671.jpg" width="200rem">
 	<img src="img/dania img.webp" width="200rem">
-<body>
+</body>
 
-<html>
+</html>
