criando menu da nvegação

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+
+	<nav>
+		<a href="" >Home</a>
+        <a href="" >Sobre</a>
+		<a href="" >Contato</a>
+		</nav>
+		
      <h1>Meu primeiro site</h1>
 	 <p>Esta é minha primeira experiencia com HTML</p>
 	<img src="https://i.redd.it/9zgiwdt3va671.jpg" width="200rem">
